--- a/mms-analysis.ipynb
+++ b/mms-analysis.ipynb
@@ -8,17 +8,17 @@
    "source": [
     "inputpath = '/Users/nauglrj1/Downloads/sms-20200324100751.xml'\n",
     "addrlookup= {\n",
-    "    \"+14104464378\" : \"Candice\",\n",
-    "    \"+14109030723\" : \"Pete\",\n",
-    "    \"+14436299049\" : \"Isabel\",\n",
-    "    \"+14432438751\" : \"Joel\",\n",
-    "    \"+13018011992\" : \"Mallory\",\n",
-    "    \"+14433796239\" : \"Kenny\",\n",
-    "    \"+14433865921\" : \"Dylan\",\n",
-    "    \"+17032034337\" : \"Alyssa\",\n",
-    "    \"+12405354343\" : \"Megan\",\n",
-    "    \"+17033005921\" : \"Hannah\",\n",
-    "    \"+14109036604\" : \"Bob\"\n",
+    "    \"+1410xxxxxxx\" : \"Candice\",\n",
+    "    \"+1410xxxxxxx\" : \"Pete\",\n",
+    "    \"+1443xxxxxxx\" : \"Isabel\",\n",
+    "    \"+1443xxxxxxx\" : \"Joel\",\n",
+    "    \"+1301xxxxxxx\" : \"Mallory\",\n",
+    "    \"+1443xxxxxxx\" : \"Kenny\",\n",
+    "    \"+1443xxxxxxx\" : \"Dylan\",\n",
+    "    \"+1703xxxxxxx\" : \"Alyssa\",\n",
+    "    \"+1240xxxxxxx\" : \"Megan\",\n",
+    "    \"+1703xxxxxxx\" : \"Hannah\",\n",
+    "    \"+1410xxxxxxx\" : \"Bob\"\n",
     "}"
    ]
   },
