--- a/mms-analysis.ipynb
+++ b/mms-analysis.ipynb
@@ -2560,13 +2560,13 @@
       "Bob liked an image\n",
       "Members of the Order of Bobs are generally very private people, much like the organization itself\n",
       "Alyssa and Joel do quarantine \n",
-      "Alyssa.nav.thorn@gmail.com\n",
-      "Isabel.portieles@gmail.com\n",
-      "bobbynaugs@gmail.com is marvelling at your artwork\n",
-      "Kenny.feldman2@gmail.com\n",
-      "My email is candicewelk09@gmail.com\n",
-      "Dylan.hosford@gmail.com\n",
-      "Megan.casady@gmail.com \n"
+      "xxxxxxxxxxxxxxxx@gmail.com\n",
+      "xxxxxxxxxxxxxxxx@gmail.com\n",
+      "xxxxxxxxxx@gmail.com is marvelling at your artwork\n",
+      "xxxxxxxxxxxxxx@gmail.com\n",
+      "My email is xxxxxxxxxxxxx@gmail.com\n",
+      "xxxxxxxxxxxxx@gmail.com\n",
+      "xxxxxxxxxxxx@gmail.com \n"
      ]
     },
     {
